<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always"
        android:title="@string/filter">

        <menu>

            <item
                android:id="@+id/menu_activity_main_filter_date"
                android:icon="@drawable/ic_date_range_white_24dp"
                app:showAsAction="ifRoom"
                android:title="@string/filter_hour">
            </item>

            <item
                android:id="@+id/menu_activity_main_filter_room"
                android:icon="@drawable/ic_room_white_24dp"
                app:showAsAction="ifRoom"
                android:title="@string/filter_room">
            </item>

        </menu>

    </item>

</menu>