<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreatorOfMeetingFragment">

    <!-- BLOC: TOPIC *************************************************************************** -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_creator_of_meeting_cl_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/horizontal_margin">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_creator_of_meeting_tv_topic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_creator_of_meeting_text_input_layout"
            app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creator_of_meeting"
            android:layout_marginBottom="@dimen/vertical_big_margin"
            android:text="@string/topic_of_meeting" />

        <!-- TEXT INPUT LAYOUT -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_creator_of_meeting_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_creator_of_meeting_tv_topic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="@integer/value_2_percentage_horizontal_creator_of_meeting"
            app:hintEnabled="false"
            app:errorEnabled="true">

            <!-- TEXT INPUT EDIT TEXT -->

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_creator_of_meeting_tiet_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_text_input_edit_text"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

<!--        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"-->

    </android.support.constraint.ConstraintLayout>

    <!-- BLOC: HOUR **************************************************************************** -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_creator_of_meeting_cl_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_creator_of_meeting_cl_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/vertical_big_margin">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_creator_of_meeting_tv_hour_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_creator_of_meeting_b_hour"
            app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creator_of_meeting"
            android:text="@string/hour_of_meeting" />

        <!-- BUTTON -->

        <Button
            android:id="@+id/fragment_creator_of_meeting_b_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_creator_of_meeting_tv_hour_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="@integer/value_2_percentage_horizontal_creator_of_meeting"
            android:background="@drawable/button"
            android:text="@string/initial_hour_of_text_view" />

    </android.support.constraint.ConstraintLayout>

    <!-- BLOC: ROOM **************************************************************************** -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_creator_of_meeting_cl_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_creator_of_meeting_cl_hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/vertical_big_margin">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_creator_of_meeting_tv_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_creator_of_meeting_spinner_room"
            app:layout_constraintHorizontal_weight="@integer/value_1_percentage_horizontal_creator_of_meeting"
            android:text="@string/room_of_meeting" />

        <!-- SPINNER -->

        <Spinner
            android:id="@+id/fragment_creator_of_meeting_spinner_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_creator_of_meeting_tv_room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="@integer/value_2_percentage_horizontal_creator_of_meeting"
            android:background="@drawable/spinner"
            android:backgroundTint="@color/colorAccent"
            android:padding="@dimen/spinner_margin"
            android:textAlignment="center" />

    </android.support.constraint.ConstraintLayout>

    <!-- BLOC: MEMBERS ************************************************************************* -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_creator_of_meeting_cl_member"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_creator_of_meeting_cl_room"
        app:layout_constraintBottom_toTopOf="@id/fragment_creator_of_meeting_fab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/vertical_big_margin"
        android:layout_marginBottom="@dimen/vertical_big_margin"
        android:layout_marginStart="@dimen/vertical_big_margin">

        <!-- TEXT VIEW -->

        <TextView
            android:id="@+id/fragment_creator_of_meeting_tv_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="@dimen/vertical_big_margin"
            android:text="@string/member" />

        <!-- RECYCLER VIEW -->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_creator_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_creator_of_meeting_tv_member"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_member"/>

    </android.support.constraint.ConstraintLayout>

    <!-- FAB -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_creator_of_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp"
        android:tint="@android:color/white"
        android:elevation="@dimen/elevation_fab" />

</android.support.constraint.ConstraintLayout>